ext-dns/sample-ing.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nginx
spec:
  rules:
  - host: ing.external.daneyon.com
    http:
      paths:
      - backend:
          serviceName: nginx
          servicePort: 80
